Fix reload button background on mobile Safari

--- a/river.css
+++ b/river.css
@@ -54,6 +54,7 @@ body, .search {
 
 .reload {
 	-webkit-appearance: none;
+	background: #ddd;
 	border: none;
 	font-size: 20px;
 	outline: none;
